[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = ""
authors = ["dhuntcode <ineedfruit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
